# bcd_tensorkit

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg
src/bcd_tenkit/: __init__.py  _smoothness.py  _tv_prox.py  _unimodality.py  bcd_parafac2.py  bcd_tenkit.py  double_splitting_parafac2.py  hierarchical_nnls.py
src/bcd_tenkit/tests/: test_block_parafac2.py  test_nnls.py
src/block_tenkit_admm/: block_parafac2.py  double_splitting_parafac2.py  hierarchical_nnls.py
src/block_tenkit_admm/tests/: test_block_parafac2.py
timing/: B.mat  smooth_experiment.py  sparsity_experiment.py  timing_experiment.py  view_results.py
