

[metadata]
name = block_tenkit_admm
keywords=block_tenkit_admm
version = 0.0.1
license = "MIT license",
description = Old code for block-coordinate descent parafac2
long_description = file: README.rst
author = Marie Roald
author_email = mariero@simula.no
url=https://github.com/marieroald/block_tenkit_admm
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    h5py
    pyamg
    tensorkit
    scikit-learn

[options.packages.find]
where=src





[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 120


