

[metadata]
name = bcd_tenkit
keywords=bcd_tenkit
version = 0.0.2
license = "MIT license",
description = Decompose coupled matrices using block coordinate descent
long_description = file: README.rst
author = Marie Roald
author_email = mariero@simula.no
url=https://github.com/marieroald/bcd_tenkit
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    h5py
    pyamg
    tensorkit
    scikit-learn
    condat_tv

[options.packages.find]
where=src





[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 120


